# rust-with-copilot-template

./: .gitignore  Cargo.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: build.yml
copilot/: rust-copilot-instruction-plan.md
crates/hello-world/: Cargo.toml
