[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dina Berry https://github.com/diberry"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.47", features = ["macros"] }
azure_identity = "*"
azure_core = "*"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
